--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,8 +1,10 @@
 backend:
-  name: git-gateway
+  name: github
+  repo: gmoranxyz/goviverse-site
   accept_roles:
     - admin
     - editor
+    - contributor
   branch: master
 media_folder: theme/assets/images
 public_folder: /assets/images
