--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,6 +1,7 @@
 backend:
   name: github
   repo: gmoranxyz/goviverse-site
+  auth_scope: repo
   open_authoring: true
   accept_roles:
     - admin
