--- a/admin/config.yml
+++ b/admin/config.yml
@@ -11,80 +11,9 @@ backend:
 media_folder: theme/assets/images
 public_folder: /assets/images
 logo_url: https://fil-foundation.on.fleek.co/logos/FF/SVG%20%28Vector%20-%20Web%29/FF_Wordmark_Vertical_Blue.svg
+display_url: https://www.fil.org
+site_url: https://phenomenal-smakager-22c00c.netlify.app/
 collections:
-  - name: pages
-    label: Pages
-    identifier_field: title
-    extension: md
-    create: false
-    delete: false
-    slug: '{{slug}}'
-    editor:
-      preview: false
-    folder: cms/pages
-    fields:
-      - label: Title
-        name: title
-        widget: string
-      - label: Publish Date
-        name: date
-        widget: datetime
-      - label: Layout
-        widget: hidden
-        name: layout
-        default: '{{slug}}.html'
-      - &ref_0
-        label: Seo
-        name: seo
-        widget: object
-        collapsed: true
-        fields:
-          - label: Title
-            name: title
-            widget: string
-            required: false
-          - label: Description
-            name: description
-            widget: string
-            required: false
-          - label: No index
-            name: noindex
-            widget: boolean
-            default: false
-            required: false
-          - label: Open Graph Title
-            name: og:title
-            widget: string
-            required: false
-          - label: Open Graph Image
-            name: og:image
-            widget: image
-            required: false
-            media_library:
-              config:
-                multiple: false
-          - label: Twitter Title
-            name: twitter:title
-            widget: string
-            default: summary
-            required: false
-          - label: Twitter Card
-            name: twitter:card
-            widget: string
-            default: summary
-            required: false
-          - label: Twitter Site
-            name: twitter:site
-            widget: string
-            required: false
-          - label: Twitter Creator
-            name: twitter:creator
-            widget: string
-            required: false
-          - label: Additional HTML tags
-            name: additional_tags
-            widget: text
-            required: false
   - name: contributions
     label: Contributions
     folder: cms/contributions
@@ -120,271 +49,4 @@ collections:
         name: date
         widget: datetime
       - *ref_0
-  - label: Theme Settings
-    name: settings
-    identifier_field: title
-    extension: json
-    create: false
-    delete: false
-    slug: '{{slug}}'
-    editor:
-      preview: false
-    files:
-      - label: General
-        name: site
-        file: cms/_data/settings/site.json
-        fields:
-          - label: Title
-            name: title
-            widget: hidden
-            default: General
-          - hint: Full domain url (needed for a correct sitemap file)
-            name: domain
-            label: Domain
-            widget: string
-            required: false
-          - name: favicon
-            label: Favicon
-            widget: image
-            allow_multiple: false
-            required: false
-          - name: apple_touch_icon
-            label: Apple Touch Icon
-            widget: image
-            allow_multiple: false
-            required: false
-          - name: header_additional_content
-            label: Additional Content Header
-            hint: Content here will be placed before </head> tag
-            widget: text
-            required: false
-          - name: footer_additional_content
-            label: Additional Content Footer
-            hint: Content here will be placed before </body> tag
-            widget: text
-            required: false
-          - name: images_optimization
-            label: Images Optimization
-            widget: object
-            collapsed: false
-            fields:
-              - label: Image Formats
-                name: formats
-                widget: select
-                multiple: true
-                options:
-                  - label: Avif
-                    value: avif
-                  - label: Webp
-                    value: webp
-              - label: Image Dimensions
-                name: dimensions
-                widget: select
-                multiple: true
-                options:
-                  - label: '500'
-                    value: 500
-                  - label: '800'
-                    value: 800
-                  - label: '1080'
-                    value: 1080
-                  - label: '1600'
-                    value: 1600
-                  - label: '2000'
-                    value: 2000
-                  - label: '2600'
-                    value: 2600
-      - label: Colors
-        name: colors
-        file: cms/_data/colors.json
-        fields:
-          - label: Title
-            name: title
-            widget: hidden
-            default: Colors
-      - label: Texts
-        name: texts
-        file: cms/_data/texts.json
-        fields:
-          - label: Title
-            name: title
-            widget: hidden
-            default: Texts
-          - hint: 'Original text: SUBMISSIONS, key: -7d1b3d79'
-            label: Text
-            name: '-7d1b3d79'
-            widget: string
-          - hint: 'Original text: CONTRIBUTE, key: 428f5a6d'
-            label: Text
-            name: 428f5a6d
-            widget: string
-          - hint: 'Original text: Title Copy Goes Here, key: 4d2a1257'
-            label: Text
-            name: 4d2a1257
-            widget: string
-          - hint: >-
-              Original text: Lorem ipsum dolor sit amet, consectetur adipiscing
-              elit. Suspendisse varius enim in eros elementum tristique. , key:
-              -7d05bb15
-            label: Text
-            name: '-7d05bb15'
-            widget: text
-          - hint: 'Original text: READ SUBMISSIONS, key: -59ebf103'
-            label: Text
-            name: '-59ebf103'
-            widget: string
-          - hint: 'Original text: Section Title, key: 7457751d'
-            label: Text
-            name: 7457751d
-            widget: string
-          - hint: >-
-              Original text: Lorem ipsum dolor sit amet consectetur. Felis vitae
-              interdum non senectus nec ac. Leo morbi a pretium egestas sit
-              tortor. Egestas vulputate integer fusce viverra egestas. Urna amet
-              vestibulum sapien tortor orci ac. Eget porttitor enim nulla
-              tempus. Et cursus tristique ut odio ipsum congue. Massa interdum
-              cursus vitae tristique. Nunc iaculis mi risus imperdiet tempus
-              duis facilisis consectetur scelerisque.
-                        Neque egestas feugiat amet quis odio tortor ornare lectus malesuada. Laoreet euismod tempus aenean pretium. Egestas in augue egestas congue lacus faucibus velit felis. Duis leo sit massa nibh eu. Suspendisse proin malesuada nulla diam non orci leo nunc et. Volutpat ut porttitor accumsan et viverra. Turpis mi sit cum aliquet aliquet quam est lectus. Ut nunc eget maecenas vel lectus parturient morbi pulvinar. Mauris sapien tristique sed dictumst varius mi nulla hendrerit. Nibh nunc cursus tempus elit urna accumsan diam habitant donec. Nisi vel vitae commodo habitant amet lectus nunc proin ac. Morbi non et proin facilisi quis quisque urna ut ipsum. Sit mattis volutpat egestas mauris. Purus sociis dictumst arcu pretium bibendum amet adipiscing mi. Habitasse ante arcu nec viverra molestie varius.
-                        Sit fermentum commodo pretium a dui ultricies a quis ut. Massa vel ut a elit. A ac at facilisi fermentum tellus ultrices mauris. Ullamcorper fringilla facilisis ultrices odio. Phasellus id eget risus morbi felis faucibus sit ac mi. Molestie purus velit interdum nullam elit ipsum ut aliquam. Neque dolor nisi porttitor ac mauris tincidunt fringilla facilisi id. Adipiscing ultrices fames praesent iaculis egestas diam., key: 45997f84
-            label: Text
-            name: 45997f84
-            widget: text
-          - hint: >-
-              Original text: Juan Benet, CEO & Founder of Protocol Labs, key:
-              364c6b09
-            label: Text
-            name: 364c6b09
-            widget: string
-          - hint: 'Original text: Contributions, key: 1e100e43'
-            label: Text
-            name: 1e100e43
-            widget: string
-          - hint: 'Original text: No items found., key: 3d503d2b'
-            label: Text
-            name: 3d503d2b
-            widget: string
-          - hint: 'Original text: SHOW MORE, key: 32eda698'
-            label: Text
-            name: 32eda698
-            widget: string
-          - hint: 'Original text: Contribute, key: -6388b573'
-            label: Text
-            name: '-6388b573'
-            widget: string
-          - hint: >-
-              Original text: Lorem ipsum dolor sit amet consectetur. Duis tellus
-              cras condimentum amet viverra arcu pharetra tortor risus. Sit
-              tortor dictumst in id nunc lorem leo vestibulum habitasse.
-              Ullamcorper maecenas interdum venenatis quis proin etiam auctor
-              est. Pretium at lacus nibh lacinia tristique purus elit lorem
-              habitant., key: 5dc0263f
-            label: Text
-            name: 5dc0263f
-            widget: text
-          - hint: 'Original text: OUR ECOSYSTEM, key: 6ef6a8ec'
-            label: Text
-            name: 6ef6a8ec
-            widget: string
-          - hint: 'Original text: filecoin.io, key: 46615ca7'
-            label: Text
-            name: 46615ca7
-            widget: string
-          - hint: 'Original text: fil.org, key: -330f0881'
-            label: Text
-            name: '-330f0881'
-            widget: string
-          - hint: 'Original text: ffdweb.org, key: 45576d26'
-            label: Text
-            name: 45576d26
-            widget: string
-          - hint: 'Original text: ABOUT, key: 3b32b6d'
-            label: Text
-            name: 3b32b6d
-            widget: string
-          - hint: 'Original text: Terms & Conditions, key: 4f912d2b'
-            label: Text
-            name: 4f912d2b
-            widget: string
-          - hint: 'Original text: Privacy Policy, key: -3fbde6f6'
-            label: Text
-            name: '-3fbde6f6'
-            widget: string
-          - hint: >-
-              Original text: Content on this site is licensed under a Creative
-              Commons Attribution 4.0 International license., key: -7e0c2f4c
-            label: Text
-            name: '-7e0c2f4c'
-            widget: text
-      - label: Links
-        name: links
-        file: cms/_data/links.json
-        fields:
-          - label: Title
-            name: title
-            widget: hidden
-            default: Links
-          - hint: 'Original link: #, key: 23'
-            label: Link
-            name: '23'
-            widget: string
-          - hint: 'Original link: http://filecoin.io, key: -6b5fecab'
-            label: Link
-            name: '-6b5fecab'
-            widget: string
-          - hint: 'Original link: http://fil.org, key: -197dcad3'
-            label: Link
-            name: '-197dcad3'
-            widget: string
-          - hint: 'Original link: http://ffdweb.org, key: -6dcfd748'
-            label: Link
-            name: '-6dcfd748'
-            widget: string
-      - label: Images
-        name: images
-        file: cms/_data/images.json
-        fields:
-          - label: Title
-            name: title
-            widget: hidden
-            default: Images
-          - label: Image
-            name: 135b77
-            widget: object
-            fields:
-              - name: url
-                label: Image Url
-                widget: image
-                allow_multiple: false
-                required: false
-              - name: alt
-                label: Image Alt
-                widget: string
-                required: false
-          - label: Image
-            name: 5e2d8459
-            widget: object
-            fields:
-              - name: url
-                label: Image Url
-                widget: image
-                allow_multiple: false
-                required: false
-              - name: alt
-                label: Image Alt
-                widget: string
-                required: false
-          - label: Image
-            name: c8a503c
-            widget: object
-            fields:
-              - name: url
-                label: Image Url
-                widget: image
-                allow_multiple: false
-                required: false
-              - name: alt
-                label: Image Alt
-                widget: string
-                required: false
 publish_mode: editorial_workflow
